--- a/src/Components/about/About.css
+++ b/src/Components/about/About.css
@@ -3,7 +3,7 @@
   height: 100%;
   width: 100%;
   margin: 0 !important;
-  padding: 0;
+  padding: 40px 0 100px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
