--- a/src/Components/resume/Resume.css
+++ b/src/Components/resume/Resume.css
@@ -3,7 +3,7 @@
   height: 100%;
   width: 100%;
   margin: 0;
-  padding: 0 !important;
+  padding: 0 0 100px 0 !important;
 }
 
 .work:hover > .underline-work,
@@ -16,7 +16,7 @@
   text-align: center;
   font-size: 50px;
   margin: 0 auto 5px auto;
-  padding-top: 50px;
+  padding: 50px 0 10px 0;
 }
 
 .underline-work,
