--- a/src/Components/Sidenav/Sidenav.css
+++ b/src/Components/Sidenav/Sidenav.css
@@ -1,6 +1,7 @@
 .Sidebar {
   font-family: "Montserrat", sans-serif;
   width: 250px;
+  height: 100%;
   font-size: 30px;
   font-weight: 700;
   position: relative;
@@ -51,6 +52,13 @@ ul {
   padding: 0;
 }
 
+@media (min-width: 300px) {
+  .Sidebar ul {
+    position: sticky;
+    top: 0;
+  }
+}
+
 .Sidebar ul li {
   color: rgb(189, 82, 138);
   text-decoration: none;
@@ -83,6 +91,7 @@ ul > li > a.active {
   font-size: 22px;
   width: 25px;
   height: 25px;
+  text-decoration: none;
   text-align: center;
   display: flex;
   justify-content: center;
