--- a/src/Components/Sidenav/Sidenav.css
+++ b/src/Components/Sidenav/Sidenav.css
@@ -102,11 +102,47 @@ ul > li > a.active {
 }
 
 .sidenav-social:hover {
-  color: rgb(225, 225, 225);
+  color: rgb(242, 242, 242);
 }
 
 .social-media > div > a > p {
   display: none;
+}
+
+@media (min-width: 750px) and (max-width: 825px) and (min-height: 370px) and (max-height: 420px) {
+  .Sidebar .sidebar-img {
+    width: 35%;
+    height: 25%;
+    margin: 15px 0 20px 0;
+  }
+
+  .Sidebar {
+    width: 200px;
+    height: 100%;
+    font-size: 15px;
+    font-weight: 600;
+  }
+
+  .Sidebar ul li {
+    padding: 1px 1px;
+    margin: 8px;
+  }
+
+  .Sidebar ul li .side-link {
+    padding: 1px 5px;
+  }
+
+  ul > li > a.active {
+    border-left: 4px solid rgb(255, 134, 134);
+  }
+
+  .sidenav-social {
+    padding: 8px;
+    margin: 4px;
+    font-size: 15px;
+    width: 12px;
+    height: 12px;
+  }
 }
 
 @media (max-width: 800px) {
