--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -1,23 +1,56 @@
 #home {
-  background-image: url("https://i.imgur.com/N9dkVfg.jpg");
+  /* background-image: url("https://i.imgur.com/N9dkVfg.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-size: center;
+  background-repeat: no-repeat; */
   background-position: center;
   background-color: cornsilk;
   color: #8601af;
   text-shadow: 1px 1px 1px white;
-  height: 200vh;
+  height: 140vh;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
-.section {
+/* .section {
   display: flex;
   flex-direction: row;
+} */
+
+.pic-container {
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
+  height: 100%;
+}
+
+.cassie-image {
+  width: auto;
+  height: 80%;
+  top: 0;
+  right: 0;
+  position: relative;
+  z-index: 3;
+}
+
+.pic-container::after {
+  border: 2px solid black;
+  /* background-color: black; */
+  content: "Cassie Brown";
+  color: #8601af;
+  text-shadow: 1px 1px 1px white;
+  text-align: center;
+  font-size: 59px;
+  position: absolute;
+  height: 50%;
+  width: 80%;
+  top: 100px;
+  left: 30%;
+  z-index: 4;
+  width: 500px;
 }
 
 #home h1 {
