--- a/src/Components/about/About.css
+++ b/src/Components/about/About.css
@@ -1,6 +1,6 @@
 #about {
   background-color: rgb(250, 209, 215);
-  height: 100%;
+  height: 100vh;
   width: 100%;
   margin: 0 !important;
   padding: 40px 0 100px 0;
@@ -8,6 +8,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-bottom: 2px solid grey;
 }
 
 #about > h1 {
@@ -69,5 +70,17 @@
     align-items: center;
     padding: 2px;
     width: 90%;
+  }
+}
+
+@media (max-width: 450px) {
+  #about {
+    height: 120vh;
+  }
+}
+
+@media (max-width: 350px) {
+  #about {
+    height: 160vh;
   }
 }
