--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -5,14 +5,19 @@
   -o-background-size: cover;
   background-size: center;
   background-repeat: no-repeat; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   background-position: center;
-  background-color: cornsilk;
-  color: #8601af;
-  text-shadow: 1px 1px 1px white;
-  height: 140vh;
+  /* background-color: cornsilk; */
+  color: rgb(244, 222, 168);
+  text-shadow: 0.8px 0.8px 0.8px rgb(85, 85, 85);
+  height: 100vh;
   width: 100%;
   margin: 0;
   padding: 0;
+  border-bottom: 2px solid grey;
 }
 
 /* .section {
@@ -20,41 +25,51 @@
   flex-direction: row;
 } */
 
+.home-heading {
+  width: 40%;
+  margin-left: 20px;
+}
+
 .pic-container {
   display: flex;
-  justify-content: flex-end;
-  align-content: center;
+  justify-content: center;
+  align-items: center;
   height: 100%;
+  width: 60%;
+  margin-right: 5px;
 }
 
 .cassie-image {
-  width: auto;
-  height: 80%;
-  top: 0;
+  width: 80%;
+  height: auto;
+  min-height: 390px;
+  min-width: 390px;
+  margin: 0;
+  border-radius: 50%;
+  /* top: 0;
   right: 0;
-  position: relative;
+  position: relative; */
   z-index: 3;
 }
 
-.pic-container::after {
+/* .pic-container::after {
   border: 2px solid black;
-  /* background-color: black; */
   content: "Cassie Brown";
   color: #8601af;
   text-shadow: 1px 1px 1px white;
   text-align: center;
   font-size: 59px;
   position: absolute;
-  height: 50%;
-  width: 80%;
-  top: 100px;
-  left: 30%;
+  height: 35%;
+  width: 75%;
+  top: 150px;
+  left: 20%;
   z-index: 4;
   width: 500px;
-}
+} */
 
 #home h1 {
-  font-size: 80px;
+  font-size: 60px;
   margin: 0;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
@@ -62,7 +77,7 @@
 }
 
 #home h3 {
-  font-size: 70px;
+  font-size: 50px;
   font-family: "Montserrat", sans-serif;
   margin: 0;
   font-weight: 400;
@@ -74,7 +89,71 @@
   padding-left: 10px;
 }
 
+@media (max-width: 1150px) {
+  #home h1,
+  #home h3 {
+    font-size: 60px;
+  }
+
+  #home h1 {
+    padding-top: 40px;
+  }
+}
+
+@media (max-width: 920px) {
+  #home {
+    flex-direction: column;
+  }
+
+  .home-heading {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 0;
+  }
+
+  #home h1,
+  #home h3 {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 800px) {
+  .pic-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100vw;
+  }
+
+  .cassie-image {
+    width: 80%;
+    height: auto;
+    margin: 0;
+  }
+}
+
 @media (max-width: 500px) {
+  #home {
+    height: 120vh;
+  }
+
+  .home-heading {
+    margin: 0;
+  }
+
+  #pic-container {
+    margin: 1px;
+  }
+
+  .cassie-image {
+    width: 50%;
+    min-width: 350px;
+    min-height: 350px;
+  }
+
   #home h1,
   #home h3 {
     font-size: 30px;
