--- a/src/Components/recipes/Recipes.css
+++ b/src/Components/recipes/Recipes.css
@@ -1,7 +1,7 @@
 #recipes {
   background-color: rgb(108, 106, 106);
   min-height: 180vh;
-  height: 100%;
+  /* height: 170vh; */
   width: 100%;
   margin: 0;
   padding: 20px 0 80px 0;
