--- a/src/Components/resume/Resume.css
+++ b/src/Components/resume/Resume.css
@@ -1,9 +1,10 @@
 #resume {
   background-color: rgb(249, 227, 230);
-  height: 100%;
+  height: 160vh;
   width: 100%;
   margin: 0;
   padding: 0 0 100px 0 !important;
+  border-bottom: 2px solid rgb(74, 74, 74);
 }
 
 .work:hover > .underline-work,
@@ -104,10 +105,16 @@
     left: 30px;
   }
 
-  .experience-container {
-    width: 80%;
-    padding-left: 70px;
-    padding-right: 25px;
+  .experience-container.left {
+    width: 90%;
+    padding-left: 30px;
+    padding-right: 20px;
+  }
+
+  .experience-container.right {
+    width: 90%;
+    padding-left: 30px;
+    padding-right: 20px;
   }
 
   .experience-container::before {
@@ -145,7 +152,7 @@
   width: 100px;
   height: 100px;
   border-radius: 40%;
-  background-color: rgb(254, 172, 172);
+  /* background-color: rgb(254, 172, 172); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -159,7 +166,6 @@
 
 .experience-section {
   padding: 10px;
-  /* background-color: rgba(182, 144, 144, 0.221); */
   color: rgba(0, 0, 0);
   border-radius: 0.5rem;
   width: 100%;
@@ -174,7 +180,30 @@
 }
 
 @media (max-width: 500px) {
-  .experience-container {
+  .experience-container.left,
+  .experience-container.right {
     width: 75%;
+  }
+}
+
+/* @media (max-width: 450px) {
+  #resume {
+    height: 165vh;
+  }
+} */
+
+@media (max-width: 380px) {
+  #resume {
+    height: 230vh;
+  }
+
+  .experience-logo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
   }
 }
