--- a/src/Components/resume/Resume.css
+++ b/src/Components/resume/Resume.css
@@ -71,7 +71,7 @@
   border: 3px solid rgb(104, 92, 96);
   background-color: rgb(104, 92, 96);
   border-radius: 50%;
-  z-index: 1;
+  z-index: 9;
 }
 
 .left {
@@ -182,7 +182,8 @@
 @media (max-width: 500px) {
   .experience-container.left,
   .experience-container.right {
-    width: 75%;
+    width: 90%;
+    padding-right: 5px;
   }
 }
 
@@ -194,10 +195,10 @@
 
 @media (max-width: 380px) {
   #resume {
-    height: 230vh;
+    height: 160vh;
   }
 
-  .experience-logo {
+  /* .experience-logo {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -205,5 +206,14 @@
     justify-content: center;
     align-items: center;
     margin-right: 10px;
+  } */
+  .experience-logo {
+    display: none;
+  }
+}
+
+@media (max-width: 350px) {
+  #resume {
+    height: 180vh;
   }
 }
